--- a/assets/base.css
+++ b/assets/base.css
@@ -22,3 +22,23 @@ svg {
 	width:100%;
 	height:100%;
 }
+.save-link {
+    position: absolute;
+    bottom: 0.9em;
+    text-align: center;
+    width: 100%;
+}
+.save-link a {
+    background-color: #F7F7F7;
+    padding: 0.1em 0.7em;
+    border-radius: 1em;
+    color: #696969;
+    text-decoration: none;
+    font-family: sans-serif;
+    font-size: 0.8em;
+    box-shadow: 0.1em 0.2em 0.5em rgba(0, 0, 0, 0.28);
+}
+.save-link a:hover {
+    background-color: #fff;
+    color: #000;
+}
